Refactor: Add reflection-remapper dependency, relocate packages, and migrate thread pools to JDK 21 Virtual Threads